Add Spark 3.5 with Scala 2.12 for VAST 5.3